hide empty values in dto and edited check endcoded url for false positive